support deploy to github pages

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "test": "cross-env BABEL_ENV=test jest",
     "lint": "eslint src/**/* test/**/* build/**/*",
     "lint:fix": "eslint --fix src/**/* test/**/* build/**/*",
-    "deploy": "node build/deploy.cjs",
+    "deploy:gh-pages": "bash bash/gh-pages-deploy.sh",
+    "deploy:server": "node build/deploy.cjs",
+    "deploy": "npm run deploy:gh-pages && npm run deploy:server",
     "buildAndDeploy": "npm run build && npm run deploy",
     "docs:dev": "vitepress dev docs --port 9006",
     "docs:build": "vitepress build docs",
