[build] 0.0.6: Update document.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "dist/better-monitor.esm.js",
     "dist/better-monitor.js",
     "dist/better-monitor.min.js",
-    "attachments",
     "README.md",
+    "README_en.md",
     "LICENSE",
     "package.json",
     "package-lock.json"
