[build] 0.0.13: Upload sdk to qiniu cdn and refresh cdn cache after each deployment.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lint:fix": "eslint --fix src/**/* test/**/* build/**/*",
     "deploy:gh-pages": "bash bash/gh-pages-deploy.sh",
     "deploy:server": "node build/deploy.cjs",
-    "deploy": "npm run deploy:gh-pages && npm run deploy:server",
+    "deploy:qiniu": "node build/deployToQiNiu.cjs",
+    "deploy": "npm run deploy:gh-pages && npm run deploy:server && npm run deploy:qiniu",
     "buildAndDeploy": "npm run build && npm run deploy",
     "buildAndDeployToServer": "npm run build && npm run deploy:server",
     "docs:dev": "cross-env NODE_ENV=development vitepress dev ./ --port 9006",
@@ -101,6 +102,7 @@
     "node-ssh": "^13.1.0",
     "npm-run-all": "4.1.5",
     "pre-commit": "^1.2.2",
+    "qiniu": "7.11.1",
     "rimraf": "5.0.5",
     "rollup": "^3.26.2",
     "rollup-plugin-auto-external": "^2.0.0",
