[build] 0.0.16: Change api prefix.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "eslint src/**/* test/**/* build/**/*",
     "lint:fix": "eslint --fix src/**/* test/**/* build/**/*",
     "deploy:gh-pages": "bash bash/gh-pages-deploy.sh",
-    "deploy:server": "node build/deploy.cjs",
+    "deploy:server": "node build/deploy.mjs",
     "deploy:qiniu": "node build/deployToQiNiu.cjs",
     "deploy": "npm run deploy:gh-pages && npm run deploy:server && npm run deploy:qiniu",
     "buildAndDeploy": "npm run build && npm run deploy",
@@ -84,6 +84,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "better-deploy": "0.0.13",
     "browser-sync": "^2.29.3",
     "cross-env": "5.2.1",
     "dayjs": "1.11.9",
