重构src、test、types目录

--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "homepage": "https://www.verybugs.com",
   "version": "0.0.48",
   "description": "JS SDK used to report data to server for better website monitoring",
+  "type": "module",
   "types": "dist/better-monitor.d.ts",
   "main": "dist/better-monitor.common.js",
   "module": "dist/better-monitor.esm.js",
   "unpkg": "dist/better-monitor.js",
   "jsdelivr": "dist/better-monitor.min.js",
+  "imports": {
+    "#build/*": "./build/*.mts",
+    "#test/*": "./test/*.mts",
+    "#api/*": "./src/api/*.mts",
+    "#plugin/*": "./src/plugin/*.mts",
+    "#scripts/*": "./src/scripts/*.mts",
+    "#src/*": "./src/*.mts",
+    "#root/*": "./*.mts"
+  },
   "files": [
     "dist/better-monitor.common.js",
     "dist/better-monitor.d.ts",
@@ -26,7 +36,7 @@
     "ready": "npm install",
     "predev": "rimraf dist",
     "tsc:build": "tsc --project build/tsconfig.json",
-    "dev": "npm run tsc:build && cross-env BABEL_ENV=build NODE_ENV=development node build/dev.js",
+    "dev": "cross-env BABEL_ENV=build NODE_ENV=development node build/dev.mts",
     "build": "npm run tsc:build && cross-env BABEL_ENV=build NODE_ENV=production node build/build.js",
     "prebuild": "rimraf dist && npm run test && npm run lint && npm run tsc:build && node build/update-version.js",
     "test": "cross-env BABEL_ENV=test jest",
@@ -39,9 +49,6 @@
     "buildAndDeploy": "npm run build && npm run deploy",
     "buildAndDeployToServer": "npm run build && npm run deploy:server"
   },
-  "pre-commit": [
-    "lint"
-  ],
   "jest": {
     "roots": [
       "test"
@@ -63,58 +70,32 @@
   "author": "yakima.public@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/node": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "@babel/preset-typescript": "^7.22.5",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-replace": "5.0.7",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.2",
+    "@eslint/js": "9.19.0",
+    "@jest/globals": "30.0.5",
+    "@types/eslint-config-prettier": "6.11.3",
     "@types/gulp": "4.0.17",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "22.1.0",
+    "@types/lodash": "4.17.20",
+    "@types/node": "22.17.2",
     "@types/object-inspect": "1.13.0",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "better-deploy": "0.0.16",
-    "cross-env": "5.2.1",
-    "dayjs": "1.11.9",
-    "eslint": "^8.45.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.3",
-    "glob": "^10.3.3",
-    "gulp": "^4.0.2",
-    "gulp-ejs": "^5.1.0",
-    "home": "2.0.0",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "29.6.2",
+    "better-deploy": "0.0.17",
+    "cross-env": "10.0.0",
+    "dayjs": "1.11.13",
+    "eslint": "9.33.0",
+    "eslint-config-prettier": "10.0.1",
+    "glob": "11.0.3",
+    "globals": "15.14.0",
+    "gulp": "5.0.1",
     "npm-run-all": "4.1.5",
-    "pre-commit": "^1.2.2",
-    "rimraf": "5.0.5",
-    "rollup": "^3.26.2",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-license": "^3.0.1",
-    "typescript": "^5.1.6",
-    "vitepress": "^1.0.0-beta.5"
+    "prettier": "3.4.2",
+    "rimraf": "6.0.1",
+    "rollup": "4.46.2",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.38.0"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "axios": "^1.4.0",
-    "D": "^1.0.0",
-    "fs-extra": "^11.1.1",
-    "lodash": "^4.17.21",
-    "object-inspect": "1.13.3",
-    "web-vitals": "3.5.2"
+    "axios": "1.11.0",
+    "lodash": "4.17.21",
+    "object-inspect": "1.13.4",
+    "web-vitals": "5.1.0"
   }
 }
