支持编译出IIFE产物（未压缩）

--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
   },
   "scripts": {
     "ready": "npm install",
+    "build": "rollup --config rollup.config.mjs",
     "predev": "rimraf dist",
     "tsc:build": "tsc --project build/tsconfig.json",
     "dev": "cross-env BABEL_ENV=build NODE_ENV=development node build/dev.mts",
-    "build": "npm run tsc:build && cross-env BABEL_ENV=build NODE_ENV=production node build/build.js",
-    "prebuild": "rimraf dist && npm run test && npm run lint && npm run tsc:build && node build/update-version.js",
+    "build1": "npm run tsc:build && cross-env BABEL_ENV=build NODE_ENV=production node build/build.js",
+    "prebuild1": "rimraf dist && npm run test && npm run lint && npm run tsc:build && node build/update-version.js",
     "test": "cross-env BABEL_ENV=test jest",
     "lint": "eslint src/**/* test/**/* build/**/*",
     "lint:fix": "eslint --fix src/**/* test/**/* build/**/*",
@@ -70,8 +71,14 @@
   "author": "yakima.public@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "7.28.3",
     "@eslint/js": "9.19.0",
     "@jest/globals": "30.0.5",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-commonjs": "28.0.6",
+    "@rollup/plugin-json": "6.1.0",
+    "@rollup/plugin-node-resolve": "16.0.1",
+    "@rollup/plugin-typescript": "12.1.4",
     "@types/eslint-config-prettier": "6.11.3",
     "@types/gulp": "4.0.17",
     "@types/lodash": "4.17.20",
@@ -86,9 +93,11 @@
     "globals": "15.14.0",
     "gulp": "5.0.1",
     "npm-run-all": "4.1.5",
+    "nsuite": "0.0.22",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "rollup": "4.46.2",
+    "tslib": "2.8.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.38.0"
   },
