--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.48",
   "description": "JS SDK used to report data to server for better website monitoring",
   "type": "module",
-  "types": "dist/better-monitor.d.ts",
+  "types": "types",
   "main": "dist/better-monitor.common.js",
   "module": "dist/better-monitor.esm.js",
   "unpkg": "dist/better-monitor.js",
@@ -20,10 +20,9 @@
   },
   "files": [
     "dist/better-monitor.common.js",
-    "dist/better-monitor.d.ts",
     "dist/better-monitor.esm.js",
-    "dist/better-monitor.js",
     "dist/better-monitor.min.js",
+    "types",
     "README.md",
     "LICENSE",
     "package.json"
@@ -34,21 +33,17 @@
   },
   "scripts": {
     "ready": "npm install",
-    "build": "rollup --config rollup.config.mjs",
     "predev": "rimraf dist",
-    "tsc:build": "tsc --project build/tsconfig.json",
-    "dev": "cross-env BABEL_ENV=build NODE_ENV=development node build/dev.mts",
-    "build1": "npm run tsc:build && cross-env BABEL_ENV=build NODE_ENV=production node build/build.js",
-    "prebuild1": "rimraf dist && npm run test && npm run lint && npm run tsc:build && node build/update-version.js",
+    "dev": "rollup --config rollup.config.mjs --watch",
+    "prebuild": "rimraf dist",
+    "build": "rollup --config rollup.config.mjs",
     "test": "cross-env BABEL_ENV=test jest",
     "lint": "eslint src/**/* test/**/* build/**/*",
     "lint:fix": "eslint --fix src/**/* test/**/* build/**/*",
-    "deploy:github": "bash bash/github-deploy.sh",
-    "deploy:qiniu": "npm run tsc:build && node build/deploy.js",
-    "deploy:npm": "npm --registry=https://registry.npmjs.org publish",
-    "deploy": "npm-run-all --parallel deploy:qiniu && npm run deploy:github && npm run deploy:npm",
-    "buildAndDeploy": "npm run build && npm run deploy",
-    "buildAndDeployToServer": "npm run build && npm run deploy:server"
+    "buildAndDeploy:int": "cross-env NODE_ENV=production MODE=int node --run buildAndDeploy",
+    "buildAndDeploy:pre": "cross-env NODE_ENV=production MODE=pre node --run buildAndDeploy",
+    "buildAndDeploy:production": "cross-env NODE_ENV=production MODE=production node --run buildAndDeploy",
+    "buildAndDeploy": "node --run build && node ./build/deploy.mts"
   },
   "jest": {
     "roots": [
@@ -78,6 +73,7 @@
     "@rollup/plugin-commonjs": "28.0.6",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.1",
+    "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.4",
     "@types/eslint-config-prettier": "6.11.3",
     "@types/gulp": "4.0.17",
