--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "rimraf": "6.0.1",
     "rollup": "4.46.2",
     "rollup-plugin-bundle-size": "1.0.3",
+    "rollup-plugin-license": "3.6.0",
     "tslib": "2.8.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.38.0"
