--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "predev": "rimraf dist",
     "dev": "rollup --config rollup.config.mjs --watch",
     "prebuild": "rimraf dist",
+    "build:int": "cross-env NODE_ENV=production MODE=int node --run build",
+    "build:pre": "cross-env NODE_ENV=production MODE=pre node --run build",
+    "build:production": "cross-env NODE_ENV=production MODE=production node --run build",
     "build": "rollup --config rollup.config.mjs",
     "test": "cross-env BABEL_ENV=test jest",
-    "lint": "eslint src/**/* test/**/* build/**/*",
-    "lint:fix": "eslint --fix src/**/* test/**/* build/**/*",
+    "lint": "eslint --fix src/**/* test/**/* build/**/*",
     "buildAndDeploy:int": "cross-env NODE_ENV=production MODE=int node --run buildAndDeploy",
     "buildAndDeploy:pre": "cross-env NODE_ENV=production MODE=pre node --run buildAndDeploy",
     "buildAndDeploy:production": "cross-env NODE_ENV=production MODE=production node --run buildAndDeploy",
@@ -81,7 +83,6 @@
     "@types/lodash": "4.17.20",
     "@types/node": "22.17.2",
     "@types/object-inspect": "1.13.0",
-    "better-deploy": "0.0.17",
     "cross-env": "10.0.0",
     "dayjs": "1.11.13",
     "eslint": "9.33.0",
@@ -89,8 +90,9 @@
     "glob": "11.0.3",
     "globals": "15.14.0",
     "gulp": "5.0.1",
+    "jiti": "2.6.1",
     "npm-run-all": "4.1.5",
-    "nsuite": "0.0.22",
+    "nsuite": "0.0.54",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "rollup": "4.46.2",
