--- a/package.json
+++ b/package.json
@@ -109,7 +109,6 @@
     "axios": "1.11.0",
     "lodash": "4.17.21",
     "object-inspect": "1.13.4",
-    "stream-browserify": "3.0.0",
-    "web-vitals": "5.1.0"
+    "stream-browserify": "3.0.0"
   }
 }
