chore(config): 更新构建与测试配置以支持 TypeScript 和 ESM
- 将 .babelrc 配置文件迁移到 .babelrc.mjs 并添加 TypeScript 支持
- 更新 jest.config.js 为 jest.config.ts 并调整测试环境为 jsdom
- 修改 package.json 中的脚本命令以支持 ESM 模块和 TypeScript 测试
- 添加 @babel/preset-typescript 依赖以支持 TypeScript 转译
- 配置 Jest 使用 babel-jest 处理 .mts 和 .mjs 文件
- 更新 prettier 脚本以包含 .ts 文件格式化- 添加 cross-env 支持以确保跨平台兼容性

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "scripts": {
     "ready": "npm install",
-    "test": "jest",
-    "prettier": "npx prettier --write ./src ./test ./build ./types ./*.mts",
+    "prettier": "npx prettier --write ./src ./test ./build ./types ./*.mts ./*.ts",
     "eslint": "eslint --fix src/**/* test/**/* build/**/*",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts",
     "tsc": "tsc --noEmit --project ./tsconfig.json",
     "lint": "npm run prettier && npm run eslint && npm run test && npm run tsc",
     "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./scripts/webpack.dev.cjs",
@@ -66,6 +66,7 @@
     "@babel/core": "7.28.4",
     "@babel/plugin-transform-runtime": "7.28.3",
     "@babel/preset-env": "7.28.3",
+    "@babel/preset-typescript": "7.27.1",
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@eslint/js": "9.19.0",
