--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
   },
   "scripts": {
     "ready": "npm install",
-    "prettier": "npx prettier --write ./src ./test ./build ./types ./*.mts ./*.ts",
+    "prettier": "npx prettier --write ./src ./test ./build ./types ./scripts ./*.mts ./*.ts",
     "eslint": "eslint --fix src/**/* test/**/* build/**/*",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts",
-    "tsc": "tsc --noEmit --project ./tsconfig.json",
-    "lint": "npm run prettier && npm run eslint && npm run test && npm run tsc",
+    "type:check": "tsc --noEmit --project ./tsconfig.json",
+    "lint": "npm run prettier && npm run eslint && npm run test && npm run type:check",
     "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./scripts/webpack.dev.cjs",
-    "build": "npm run lint && cross-env NODE_ENV=production MODE=production webpack --config ./scripts/webpack.prod.js",
-    "debug": "npm run lint && cross-env NODE_ENV=production MODE=production webpack --config ./scripts/webpack.debug.js",
+    "build": "npm run lint && cross-env NODE_ENV=production MODE=production webpack --config ./scripts/webpack.prod.cjs",
+    "debug": "npm run lint && cross-env NODE_ENV=production MODE=production webpack --config ./scripts/webpack.debug.cjs",
     "prepare": "husky install",
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
