--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "glob": "11.0.3",
     "globals": "15.14.0",
     "gulp": "5.0.1",
+    "html-webpack-inject-attributes-plugin": "1.0.6",
     "html-webpack-plugin": "5.6.4",
     "husky": "9.1.7",
     "jest": "30.2.0",
