--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.49",
   "description": "JS SDK used to report data to server for better website monitoring",
   "type": "module",
-  "types": "types",
+  "types": "./types/index.d.ts",
   "main": "dist/better-monitor.common.js",
   "module": "dist/better-monitor.esm.js",
   "unpkg": "dist/better-monitor.js",
