--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   },
   "scripts": {
     "ready": "npm install",
-    "prettier": "npx prettier --write ./src ./test ./build ./types ./scripts ./*.mts ./*.ts",
-    "eslint": "eslint --fix src/**/* test/**/* build/**/* scripts/**/* ./*.mts ./*.ts ./*.cjs",
+    "prettier": "npx prettier --write ./src ./test ./build ./types ./*.mts ./*.ts",
+    "eslint": "eslint --fix src/**/* test/**/* build/**/* ./*.mts ./*.ts ./*.cjs",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts",
     "type:check": "tsc --noEmit --project ./tsconfig.json",
     "lint": "npm run prettier && npm run eslint && npm run test && npm run type:check",
-    "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./scripts/webpack.dev.cjs",
-    "build": "cross-env NODE_ENV=production MODE=production webpack --config ./scripts/webpack.prod.cjs",
-    "debug": "cross-env NODE_ENV=production MODE=production webpack --config ./scripts/webpack.debug.cjs",
+    "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./build/webpack.dev.cjs",
+    "build": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.prod.cjs",
+    "debug": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.debug.cjs",
     "prepare": "husky install",
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
