refactor(build): migrate build scripts to ESM modules
- Converted CommonJS modules to ES modules across build scripts
- Updated file extensions from .cjs to .mts
- Replaced require() with import/export syntax
- Centralized constants and configurations in constants.mts
- Updated webpack configuration files to use ESM- Added TypeScript types to utility functions
- Updated package.json scripts to reference .mts files
- Added @types/webpack-bundle-analyzer dependency
- Updated fs-extra version in package-lock.json
- Removed redundant path resolution logic
- Standardized import paths using nsuite utilities- Exported webpack configurations properly
- Cleaned up unused imports and variables
- Fixed path resolution for dist and public directories- Updated environment variable parsing logic
- Added Qiniu OSS configuration exports
- Improved type safety in build scripts
- Removed deprecated module.exports usage
- Updated webpack dev server configuration- Fixed banner plugin year reference
- Updated deployment script to use new paths
- Added proper default exports for webpack configs
- Removed recursive rmSync calls in favor of cleaner approach
- Updated ignore path list in deployment script
- Fixed local path reference in CDN upload
- Added build year constant for copyright
- Updated webpack

--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts",
     "type:check": "tsc --noEmit --project ./tsconfig.json",
     "lint": "npm run prettier && npm run eslint && npm run test && npm run type:check",
-    "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./build/webpack.dev.cjs",
-    "build": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.prod.cjs",
-    "debug": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.debug.cjs",
+    "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./build/webpack.dev.mts",
+    "build": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.prod.mts",
+    "debug": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.debug.mts",
     "prepare": "husky install",
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
@@ -80,6 +80,7 @@
     "@types/lodash": "4.17.20",
     "@types/node": "22.17.2",
     "@types/object-inspect": "1.13.0",
+    "@types/webpack-bundle-analyzer": "4.7.0",
     "babel-jest": "30.2.0",
     "babel-loader": "10.0.0",
     "cross-env": "10.0.0",
