chore(commitlint): migrate commitlint config to typescript format - Add new commitlint.config.ts with typed configuration - Remove old .commitlintrc.mts file - Update husky commit-msg hook to use new config - Add .husky/_ to .gitignore - Simplify eslint config by removing cjs specific rules - Update package.json scripts and dependencies - Change husky install command in prepare script

--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   "scripts": {
     "ready": "npm install",
     "prettier": "npx prettier --write ./src ./test ./build ./types ./*.mts ./*.ts",
-    "eslint": "eslint --fix src/**/* test/**/* build/**/* ./*.mts ./*.ts ./*.cjs",
+    "eslint": "eslint --fix src/**/* test/**/* build/**/* ./*.mts ./*.ts",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.ts",
     "type:check": "tsc --noEmit --project ./tsconfig.json",
     "lint": "npm run prettier && npm run eslint && npm run test && npm run type:check",
     "dev": "cross-env NODE_ENV=development MODE=production webpack-dev-server --config ./build/webpack.dev.mts",
     "build": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.prod.mts",
     "debug": "cross-env NODE_ENV=production MODE=production webpack --config ./build/webpack.debug.mts",
-    "prepare": "husky install",
+    "prepare": "husky",
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
     "release-minor": "standard-version --release-as minor",
