docs(readme): update links and API doc references
- Add related links section with official website, API docs, GitHub repo, and NPM package
- Replace "后文" with "API 文档" for configuration parameter references
- Remove duplicate related links section
- Update unpkg field in package.json to use minified version
- Add TypeScript type definitions to exports map for import, require, browser, and default entries

--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
   "main": "./dist/better-monitor.cjs.js",
   "module": "./dist/better-monitor.esm.js",
   "browser": "./dist/better-monitor.umd.js",
-  "unpkg": "./dist/better-monitor.js",
+  "unpkg": "./dist/better-monitor.min.js",
   "jsdelivr": "./dist/better-monitor.min.js",
   "exports": {
-    "import": "./dist/better-monitor.esm.js",
-    "require": "./dist/better-monitor.cjs.js",
-    "browser": "./dist/better-monitor.umd.js",
-    "default": "./dist/better-monitor.cjs.js"
+    "import": {
+      "types": "./types/index.d.ts",
+      "default": "./dist/better-monitor.esm.js"
+    },
+    "require": {
+      "types": "./types/index.d.ts",
+      "default": "./dist/better-monitor.cjs.js"
+    },
+    "browser": {
+      "types": "./types/index.d.ts",
+      "default": "./dist/better-monitor.umd.js"
+    },
+    "default": {
+      "types": "./types/index.d.ts",
+      "default": "./dist/better-monitor.cjs.js"
+    }
   },
   "imports": {
     "#build/*": "./build/*.mts",
