feat(types): add type definitions and update log level
- Added type imports across multiple modules for better type safety
- Updated LogLevel type from 'log' to 'info' for consistency
- Exported ExportObj interface for external use
- Added new type definitions in types/index.d.ts
- Removed deprecated TODO comment for updateStore API
- Marked addView and updateStore methods as deprecated with warnings
- Integrated type checking for request data structures
- Enhanced type coverage for plugin modules and utilities

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "#plugin/*": "./src/plugin/*.mts",
     "#scripts/*": "./src/scripts/*.mts",
     "#src/*": "./src/*.mts",
-    "#root/*": "./*.mts"
+    "#root/*": "./*.mts",
+    "#types/*": "./types/*.d.ts"
   },
   "files": [
     "dist/better-monitor.esm.js",
