chore(deploy): add git push before npm publish
- Added git push with follow-tags to ensure version tags are pushed
- Maintained existing npm publish and deployment steps
- Updated deploy script to push to main branch before publishing

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "release-major": "standard-version --release-as major",
     "release-minor": "standard-version --release-as minor",
     "release-patch": "standard-version --release-as patch",
-    "deploy": "npm publish --registry=https://registry.npmjs.org/ &&cross-env NODE_ENV=production MODE=production node ./build/deploy.mts",
+    "deploy": "git push --follow-tags origin main &&npm publish --registry=https://registry.npmjs.org/ &&cross-env NODE_ENV=production MODE=production node ./build/deploy.mts",
     "buildAndDeploy": "node --run build && node --run deploy"
   },
   "keywords": [
